--- a/index.html
+++ b/index.html
@@ -1,8 +1,170 @@
-<html>
-  <head>
-    <title>Quicksign</title>
-  </head>
-  <body>
-    <p>Quicksign</p>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="apple-touch-icon" sizes="76x76" href="/assets/img/favicon.png">
+  <link rel="icon" type="image/png" href="/assets/img/favicon.png">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <title>
+    Quicksign - Open Source Projects
+  </title>
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
+  <!--     Fonts and icons     -->
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+
+  <!-- CSS Files -->
+  <link href="node_modules/material-kit/assets/css/material-kit.css?v=2.0.4" rel="stylesheet" />
+  <link href="/assets/css/index.css" rel="stylesheet" />
+</head>
+
+<body class="landing-page sidebar-collapse qs">
+  <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
+    <div class="container">
+      <div class="navbar-translate">
+        <a class="navbar-brand" target="_blank" href="https://www.quicksign.com">
+          Quicksign </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ml-auto">
+          <li class="dropdown nav-item">
+            <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
+              <i class="material-icons">apps</i> Projects
+            </a>
+            <div class="dropdown-menu dropdown-with-icons">
+              <a href="#" target="_blank" class="dropdown-item">
+                <img class="dropdown-item-img" src="/assets/img/GitHub-Mark-32px.png" /> Kafka Encryption
+              </a>
+              <a href="#" target="_blank" class="dropdown-item">
+                <img class="dropdown-item-img" src="/assets/img/GitHub-Mark-32px.png" /> React Chatbox
+              </a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://twitter.com/quicksign_sas" target="_blank" data-original-title="Follow us on Twitter">
+              <i class="fa fa-twitter"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://fr-fr.facebook.com/QuickSign-668457933356696/" target="_blank" data-original-title="Like us on Facebook">
+              <i class="fa fa-facebook-square"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.linkedin.com/company/quicksign/" target="_blank" data-original-title="Follow us on LinkedIn">
+              <i class="fa fa-linkedin"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="page-header header-filter" data-parallax="true" style="background-image: url('/assets/img/background_main.jpeg')">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h1 class="title margin-top-off">Quicksign - Open Source projects</h1>
+          <h4>Everyone needs new ideas. Everyone needs to challenge his mind. That's why we created this homepage, here you can find really interesting projects about modern subjects that matter.</h4>
+        </div>
+        <div class="col-md-4 offset-left-2">
+        	<h3 class="title title-list">Projects:</h3>
+        	<ul class="description-list">
+        		<li>
+        			<span class="main-name">React Chatbox</span> -
+        			<span> a wonderful chat which handles async calls...</span>
+        		</li>
+        		<li>
+        			<span class="main-name">Kafka Encryption</span> -
+        			<span> wants kafka encryption in your project, y...</span>
+        		</li>
+        	</ul>
+				</div>
+      </div>
+    </div>
+  </div>
+  <div class="main main-raised">
+    <div class="container">
+      <div class="section text-center">
+        <div class="row">
+          <div class="col-md-8 ml-auto mr-auto">
+            <h2 class="title project-title"></h2>
+            <h5 class="description">All projects take part of a more great project which is our new plateform based on wonderful technologies such as Kafka, Camunda, React...</h5>
+          </div>
+        </div>
+        <div class="features">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="info">
+                <div class="icon icon-info">
+                  <i class="material-icons">chat</i>
+                </div>
+                <h4 class="info-title">React Chatbox</h4>
+                <p>A simple <b>chat component</b> based on React which handles async messages: 
+                	<a href="#">react-chatBox</a>
+              	</p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="info">
+                <div class="icon icon-success">
+                  <i class="material-icons">fingerprint</i>
+                </div>
+                <h4 class="info-title">Kafka Encryption</h4>
+                <p>Data security is becoming a huge challenge for everyone these days. So we have developed a service to encrypte Kafka topics: 
+                	<a href="#">kafka-encryption</a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer class="footer footer-default">
+    <div class="container">
+      <nav class="float-left">
+        <ul>
+          <li>
+            <a href="https://www.quicksign.com" target="_blank">
+              Quicksign
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/Quicksign/quicksign.github.io" target="_blank">
+              Github
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <div class="copyright float-right">
+        &copy;
+        <script>
+          document.write(new Date().getFullYear())
+        </script> Corporate Quicksign <i class="material-icons">business</i>
+      </div>
+    </div>
+  </footer>
+
+  <!--   Core JS Files   -->
+  <script src="node_modules/material-kit/assets/js/core/jquery.min.js" type="text/javascript"></script>
+  <script src="node_modules/material-kit/assets/js/core/popper.min.js" type="text/javascript"></script>
+  <script src="node_modules/material-kit/assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
+  <script src="node_modules/material-kit/assets/js/plugins/moment.min.js"></script>
+  <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
+  <!-- <script src="node_modules/material-kit/assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script> -->
+  <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+  <!-- <script src="node_modules/material-kit/assets/js/plugins/nouislider.min.js" type="text/javascript"></script> -->
+  <!--	Plugin for Sharrre btn -->
+  <script src="node_modules/material-kit/assets/js/plugins/jquery.sharrre.js" type="text/javascript"></script>
+  <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
+  <script src="node_modules/material-kit/assets/js/material-kit.js?v=2.0.4" type="text/javascript"></script>
+  <script src="/assets/js/index.js" type="text/javascript"></script>
+</body>
 </html>
