--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="76x76" href="/assets/img/favicon.png">
-  <link rel="icon" type="image/png" href="/assets/img/favicon.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="./static/img/favicon.png">
+  <link rel="icon" type="image/png" href="./static/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
     Quicksign - Open Source Projects
@@ -15,8 +15,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
 
   <!-- CSS Files -->
-  <link href="node_modules/material-kit/assets/css/material-kit.css?v=2.0.4" rel="stylesheet" />
-  <link href="/assets/css/index.css" rel="stylesheet" />
+  <link href="./static/css/index.css" rel="stylesheet" />
 </head>
 
 <body class="landing-page sidebar-collapse qs">
@@ -40,10 +39,7 @@
             </a>
             <div class="dropdown-menu dropdown-with-icons">
               <a href="#" target="_blank" class="dropdown-item">
-                <img class="dropdown-item-img" src="/assets/img/GitHub-Mark-32px.png" /> Kafka Encryption
-              </a>
-              <a href="#" target="_blank" class="dropdown-item">
-                <img class="dropdown-item-img" src="/assets/img/GitHub-Mark-32px.png" /> React Chatbox
+                <img class="dropdown-item-img" src="./static/img/GitHub-Mark-32px.png" /> Kafka Encryption
               </a>
             </div>
           </li>
@@ -66,7 +62,7 @@
       </div>
     </div>
   </nav>
-  <div class="page-header header-filter" data-parallax="true" style="background-image: url('/assets/img/background_main.jpeg')">
+  <div class="page-header header-filter" data-parallax="true" style="background-image: url('./static/img/background_main.jpeg')">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -76,10 +72,6 @@
         <div class="col-md-4 offset-left-2">
         	<h3 class="title title-list">Projects:</h3>
         	<ul class="description-list">
-        		<li>
-        			<span class="main-name">React Chatbox</span> -
-        			<span> a wonderful chat which handles async calls...</span>
-        		</li>
         		<li>
         			<span class="main-name">Kafka Encryption</span> -
         			<span> wants kafka encryption in your project, y...</span>
@@ -100,18 +92,7 @@
         </div>
         <div class="features">
           <div class="row">
-            <div class="col-md-6">
-              <div class="info">
-                <div class="icon icon-info">
-                  <i class="material-icons">chat</i>
-                </div>
-                <h4 class="info-title">React Chatbox</h4>
-                <p>A simple <b>chat component</b> based on React which handles async messages: 
-                	<a href="#">react-chatBox</a>
-              	</p>
-              </div>
-            </div>
-            <div class="col-md-6">
+            <div class="col-md-4">
               <div class="info">
                 <div class="icon icon-success">
                   <i class="material-icons">fingerprint</i>
@@ -137,7 +118,7 @@
             </a>
           </li>
           <li>
-            <a href="https://github.com/Quicksign/quicksign.github.io" target="_blank">
+            <a href="https://github.com/Quicksign" target="_blank">
               Github
             </a>
           </li>
@@ -152,19 +133,15 @@
     </div>
   </footer>
 
-  <!--   Core JS Files   -->
-  <script src="node_modules/material-kit/assets/js/core/jquery.min.js" type="text/javascript"></script>
-  <script src="node_modules/material-kit/assets/js/core/popper.min.js" type="text/javascript"></script>
-  <script src="node_modules/material-kit/assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
-  <script src="node_modules/material-kit/assets/js/plugins/moment.min.js"></script>
-  <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
-  <!-- <script src="node_modules/material-kit/assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script> -->
-  <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-  <!-- <script src="node_modules/material-kit/assets/js/plugins/nouislider.min.js" type="text/javascript"></script> -->
-  <!--	Plugin for Sharrre btn -->
-  <script src="node_modules/material-kit/assets/js/plugins/jquery.sharrre.js" type="text/javascript"></script>
-  <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
-  <script src="node_modules/material-kit/assets/js/material-kit.js?v=2.0.4" type="text/javascript"></script>
-  <script src="/assets/js/index.js" type="text/javascript"></script>
+  <script src="./node_modules/material-kit/assets/js/core/jquery.min.js" type="text/javascript"></script>
+	<script src="./node_modules/material-kit/assets/js/core/popper.min.js" type="text/javascript"></script>
+	<script src="./node_modules/material-kit/assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
+	<script src="./node_modules/material-kit/assets/js/plugins/moment.min.js"></script>
+	
+	<!-- Place this tag in your head or just before your close body tag. -->
+	<script async defer src="https://buttons.github.io/buttons.js"></script>
+	<!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
+	<script src="./node_modules/material-kit/assets/js/material-kit.js?v=2.0.4" type="text/javascript"></script>
+  <script src="./static/js/app.js" type="text/javascript"></script>
 </body>
 </html>
