--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
       <div class="row">
         <div class="col-md-6">
           <h1 class="title margin-top-off">Quicksign - Open Source projects</h1>
-          <h4>Everyone needs new ideas. Everyone needs to challenge his mind. That's why we created this homepage, here you can find really interesting projects about modern subjects that matter.</h4>
+          <h4>Modern projects are made up of many open source building blocks. Here are the projects that our engineering teams felt might contribute to the ecosystem.</h4>
         </div>
         <div class="col-md-4 offset-left-2">
         	<h3 class="title title-list">Projects:</h3>
         	<ul class="description-list">
         		<li>
         			<span class="main-name">Kafka Encryption</span> -
-        			<span> wants kafka encryption in your project, y...</span>
+        			<span>Provides full end to end encryption in Kakfa</span>
         		</li>
         	</ul>
 				</div>
@@ -87,7 +87,7 @@
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto">
             <h2 class="title project-title"></h2>
-            <h5 class="description">All projects take part of a more great project which is our new plateform based on wonderful technologies such as Kafka, Camunda, React...</h5>
+            <h5 class="description">Each of those projects are building blocks of Quicksign's platform. We hope you'll find them as useful as we do.</h5>
           </div>
         </div>
         <div class="features">
@@ -98,7 +98,7 @@
                   <i class="material-icons">fingerprint</i>
                 </div>
                 <h4 class="info-title">Kafka Encryption</h4>
-                <p>Data security is becoming a huge challenge for everyone these days. So we have developed a service to encrypte Kafka topics: 
+                <p>Personal data protection is becoming increasingly important for everyone these days. We chose no compromise, we encrypt everything end to end: 
                 	<a href="#">kafka-encryption</a>
                 </p>
               </div>
