added links to kafka-encryption

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <i class="material-icons">apps</i> Projects
             </a>
             <div class="dropdown-menu dropdown-with-icons">
-              <a href="#" target="_blank" class="dropdown-item">
+              <a href="/kafka-encryption" target="_blank" class="dropdown-item">
                 <img class="dropdown-item-img" src="./static/img/GitHub-Mark-32px.png" /> Kafka Encryption
               </a>
             </div>
@@ -97,10 +97,8 @@
                 <div class="icon icon-success">
                   <i class="material-icons">fingerprint</i>
                 </div>
-                <h4 class="info-title">Kafka Encryption</h4>
-                <p>Personal data protection is becoming increasingly important for everyone these days. We chose no compromise, we encrypt everything end to end: 
-                	<a href="#">kafka-encryption</a>
-                </p>
+                <h4 class="info-title"><a href="/kafka-encryption">Kafka Encryption</a></h4>
+                <p>Personal data protection is becoming increasingly important for everyone these days. We chose no compromise, we encrypt everything end to end</p>
               </div>
             </div>
           </div>
