Removed Facebook link and fixed typos

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" href="./static/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
-    Quicksign - Open Source Projects
+    QuickSign - Open Source Projects
   </title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
@@ -49,11 +49,6 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://fr-fr.facebook.com/QuickSign-668457933356696/" target="_blank" data-original-title="Like us on Facebook">
-              <i class="fa fa-facebook-square"></i>
-            </a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.linkedin.com/company/quicksign/" target="_blank" data-original-title="Follow us on LinkedIn">
               <i class="fa fa-linkedin"></i>
             </a>
@@ -78,7 +73,7 @@
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto">
             <h2 class="title project-title"></h2>
-            <h5 class="description">Each of those projects are building blocks of Quicksign's platform. We hope you'll find them as useful as we do.</h5>
+            <h5 class="description">Each of these projects are building blocks of Quicksign's platform. We hope you'll find them as useful as we do.</h5>
           </div>
         </div>
         <div class="features">
@@ -117,7 +112,7 @@
         &copy;
         <script>
           document.write(new Date().getFullYear())
-        </script> Corporate Quicksign <i class="material-icons">business</i>
+        </script> Corporate QuickSign <i class="material-icons">business</i>
       </div>
     </div>
   </footer>
