Fixed QuickSign case

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="navbar-translate">
         <a class="navbar-brand" target="_blank" href="https://www.quicksign.com">
-          Quicksign </a>
+          QuickSign </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="sr-only">Toggle navigation</span>
           <span class="navbar-toggler-icon"></span>
@@ -61,7 +61,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h1 class="title margin-top-off">Quicksign - Open Source projects</h1>
+          <h1 class="title margin-top-off">QuickSign - Open Source projects</h1>
           <h4>Modern projects are made up of many open source building blocks. Here are the projects that our engineering teams felt might contribute to the ecosystem.</h4>
         </div>
       </div>
@@ -73,7 +73,7 @@
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto">
             <h2 class="title project-title"></h2>
-            <h5 class="description">Each of these projects are building blocks of Quicksign's platform. We hope you'll find them as useful as we do.</h5>
+            <h5 class="description">Each of these projects are building blocks of QuickSign's platform. We hope you'll find them as useful as we do.</h5>
           </div>
         </div>
         <div class="features">
@@ -98,11 +98,11 @@
         <ul>
           <li>
             <a href="https://www.quicksign.com" target="_blank">
-              Quicksign
+              QuickSign
             </a>
           </li>
           <li>
-            <a href="https://github.com/Quicksign" target="_blank">
+            <a href="https://github.com/quicksign" target="_blank">
               Github
             </a>
           </li>
