--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="navbar-translate">
         <a class="navbar-brand" target="_blank" href="https://www.quicksign.com">
-          QuickSign </a>
+          <img class="title-logo" src="./static/img/logo.svg" />QuickSign </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="sr-only">Toggle navigation</span>
           <span class="navbar-toggler-icon"></span>
