--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="icon icon-success">
                   <i class="material-icons">fingerprint</i>
                 </div>
-                <h4 class="info-title"><a href="/kafka-encryption">Kafka Encryption</a></h4>
+                <h4 class="info-title"><a href="https://github.com/quicksign/kafka-encryption">Kafka Encryption</a></h4>
                 <p>Personal data protection is becoming increasingly important for everyone these days. We chose no compromise, we encrypt everything end to end</p>
               </div>
             </div>
