--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" href="./static/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
-    QuickSign - Open Source Projects
+    QuickSign - Open Source projects
   </title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
@@ -121,7 +121,7 @@
 	<script src="./node_modules/material-kit/assets/js/core/popper.min.js" type="text/javascript"></script>
 	<script src="./node_modules/material-kit/assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
 	<script src="./node_modules/material-kit/assets/js/plugins/moment.min.js"></script>
-	
+
 	<!-- Place this tag in your head or just before your close body tag. -->
 	<script async defer src="https://buttons.github.io/buttons.js"></script>
 	<!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
