--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto">
             <h2 class="title project-title"></h2>
-            <h5 class="description">Each of these projects are building blocks of QuickSign's platform. We hope you'll find them as useful as we do.</h5>
+            <h5 class="description">Each of these projects are building blocks forming QuickSign's platform. We hope you'll find them as useful as we do.</h5>
           </div>
         </div>
         <div class="features">
